Prueba de conexión de BD, javaFX Scene Builder. Prueba de funcionamiento de dependencias.