@@ -122,7 +122,7 @@
     <build>
         <plugins>
 
-            <!-- Compilador para Java 25 -->
+            <!-- Compilador con soporte Java 25 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -132,13 +132,20 @@
                 </configuration>
             </plugin>
 
-            <!-- Plugin de ejecución JavaFX completamente portable -->
+            <!-- Plugin de ejecución JavaFX (portable y sin warnings de JDK 25) -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.example.eduquiz.HelloApplication</mainClass>
+
+                    <!-- Silencia los warnings del JDK 25 -->
+                    <options>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>java.base/java.lang=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
 
